fixes code following the mypy recommendations;

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,3 +77,7 @@ strict = true
 warn_return_any = true
 warn_unused_ignores = true
 disallow_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = "oscli.*"
+ignore_missing_imports = true
