--- a/.github/workflows/python-build-and-test.yml
+++ b/.github/workflows/python-build-and-test.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff mypy pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -e .[dev]
 
       - name: Lint with ruff
         run: |
