--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,13 @@ dev = [
     "ruff>=0.1.0",
     "types-requests>=2.28.0",
 ]
+docs = [
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocstrings[python]>=0.24.0",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-literate-nav>=0.6.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/rafaelpontezup/stkai-sdk-python"
