--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ theme:
     - content.code.copy
     - content.code.annotate
     - toc.follow
+    - toc.integrate
   icon:
     repo: fontawesome/brands/github
 
