--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,11 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
+# Logging (disabled by default, enable with: pytest --log-cli-level=DEBUG)
+log_cli = false
+log_cli_level = "DEBUG"
+log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
+log_cli_date_format = "%H:%M:%S"
 
 [tool.ruff]
 target-version = "py312"
