--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
   - Agents:
     - Overview: agents/index.md
     - Usage Guide: agents/usage.md
+    - Result Handlers: agents/handlers.md
     - Rate Limiting: agents/rate-limiting.md
   - Configuration: configuration.md
   - HTTP Client: http-client.md
