--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "coverage>=5.0.0",
     "mypy>=1.0.0",
     "ruff>=0.1.0",
     "types-requests>=2.28.0",
@@ -93,3 +94,15 @@ disallow_untyped_defs = true
 [[tool.mypy.overrides]]
 module = "oscli.*"
 ignore_missing_imports = true
+
+[tool.coverage.run]
+source = ["src"]
+branch = true
+omit = ["tests/*"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+]
