Simulations: adds simulation's reference graphs;

--- a/simulations/results/.gitignore
+++ b/simulations/results/.gitignore
@@ -1,4 +1,6 @@
-# Ignore all results (generated files)
-*.png
-*.csv
-*.json
+# Ignore timestamped run directories and latest symlink
+*/
+latest
+
+# Keep reference directory versioned
+!reference/
